# sam3_labeler

./: .gitignore  AGENTS.md  README.md  bench_gemma4.py  pyproject.toml  run.sh
app/: main.py
app/core/: artifacts.py  config.py  db.py  estimator.py  export_runner.py  frame_queue.py  job_runner.py  prompt_optimizer.py  prompt_tester.py  sam3_workers.py  vlm_client.py
app/recipes/: default.yaml  weapons.yaml
app/routes/: jobs.py  ontology.py  ui.py
app/stages/: frame_dedup.py  ingest.py  scene_detect.py
app/templates/: base.html  exports.html  job_detail.html  jobs_list.html  new_job.html  ontology.html  visualizer.html
app/tools/: sam3_frame_worker.py  sam3_prompt_tester.py
configs/: generated_ontology.yaml  restaurant_common_ontology.yaml  restaurant_ontology.yaml
examples/: action_label_prompt.md
sam3_labeler/: __init__.py  exporters.py  files.py  ontology.py  sam3_image.py
scripts/: label_images.py  label_video.py  launch_multi_gpu_images.py  merge_image_shards.py  visualize_image_labels.py
static/: app.css  dgl.css  tokens.css
tests/: conftest.py  test_api_smoke.py  test_export_runner.py  test_frame_queue.py  test_job_runner_functional.py  test_pipeline_prep.py  test_preprocessing_functional.py  test_sam3_multigpu_integration.py  test_sam3_worker_specs.py
