[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sam3-labeler"
version = "0.1.0"
description = "SAM 3 based auto-labeling utilities for restaurant images and videos"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "opencv-python",
  "pillow",
  "pyyaml",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sam3_labeler*"]
