[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sam3-labeler"
version = "0.1.0"
description = "SAM3 labeling tool — prepares frames and orchestrates SAM3 worker processes that write raw annotation artifacts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "aiosqlite>=0.20",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "pillow>=10",
    "imagehash>=4.3",
    "scenedetect[opencv]>=0.6",
    "tqdm",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "numpy",
    "pandas>=2.0",
    "pyarrow",
]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: tests that intentionally use larger fixture subsets",
    "sam3: tests that require a configured SAM3 model environment",
]
